--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kanae's portfolio site</title>
         <meta name="description" content="Digital designer Kanae's portfolio site.">
         <meta name="keyword" content="portfolio,digital designer,website">
@@ -15,7 +15,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body id="page-about">
-        <div class="body_inner">
+        <div class="header_wrapper">
             <header>
                 <ul class="header_inner">
                     <li><a href="index.html">Home</a></li>
@@ -23,6 +23,8 @@
                     <li class="current-page"><a href="about.html">About</a></li>
                 </ul>
             </header>
+        <div class="header_wrapper">
+        <div class="body_inner">
             <h2 class="coming-soon">Coming soon...</h2>
             <footer>
             </footer>
