--- a/work/website02.html
+++ b/work/website02.html
@@ -1,7 +1,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kanae's portfolio site</title>
         <meta name="description" content="Digital designer Kanae's portfolio site.">
         <meta name="keyword" content="portfolio,digital designer,website">
@@ -16,64 +16,67 @@
         <link rel="stylesheet" type="text/css" href="../css/style.css">
     </head>
     <body id="page-work">
-        <div class="body_inner">
-            <header>
-                <ul class="header_inner">
-                    <li><a href="../index.html">Home</a></li>
-                    <li class="current-page"><a href="../index.html #work-list_anchor">Work</a></li>
-                    <li><a href="../about.html">About</a></li>
-                </ul>
-            </header>
-            <section class="MV">
-                <!-- <div class="inner"> -->
-                    <div class="company">
-                        <p class="name">EP Link</p><p class="industry">clinical trial company</p>
-                    </div>
-                    <h2 class="MV_title">Recruitment Website</h2>
-                    <div class="MV_bottom">
-                        <div class="myrole">
-                            <p class="title">My Role</p>
-                            <p class="role">UI design (subpages)</p>
+        <div class="overflow-hidden">
+            <div class="header_wrapper">
+                <header>
+                    <ul class="header_inner">
+                        <li><a href="../index.html">Home</a></li>
+                        <li class="current-page"><a href="../index.html #work-list_anchor">Work</a></li>
+                        <li><a href="../about.html">About</a></li>
+                    </ul>
+                </header>
+            </div>
+            <div class="body_inner">
+                <section class="MV">
+                    <!-- <div class="inner"> -->
+                        <div class="company">
+                            <p class="name">EP Link</p><div class="line"></div><p class="industry">Clinical Trial Company</p>
                         </div>
-                        <div class="btn_visit">
-                            <a href="https://www.ep-link.co.jp/recruit/" target="_blank">Visit Website</a>
-                        </div>
-                    </div>
-                    <div class="fluid"></div>
-                <!-- </div> -->
-            </section>
-            <section class="main">
-                <!-- <div class="inner"> -->
-                    <img class="main-img" src="../img/work/website/website02/main-img.jpg">
-                    <div class="explanation">
-                        <div class="project">
-                            <div class="text">
-                                <h3>Project</h3>
-                                <p>The client company is a clinical trial company. This project is renewing the client's recruitment site because the previous recruitment site has gotten old and they started to recruit actively. Their recruitment problem is that they are also recruiting people who do not have experience as a clinical research coordinator (CRC), however many people do not know CRC, and the client company could not get many candidates. So they want to tell people what the CRC job is like through the new recruitment site. Our team decided to mainly make content that people can learn from the basics to the details of the CRC job.</p>
+                        <h2 class="MV_title">Recruitment Website</h2>
+                        <div class="MV_bottom">
+                            <div class="myrole">
+                                <p class="title">My Role</p>
+                                <p class="role">UI design (subpages)</p>
                             </div>
-                            <div class="work_img01">
-                                <img src="../img/work/website/website02/project_img.png">
+                            <div class="btn_visit">
+                                <a href="https://www.ep-link.co.jp/recruit/" target="_blank">Visit Website</a>
                             </div>
                         </div>
-                        <div class="visual-design">
-                            <div class="work_img02">
-                                <img src="../img/work/website/website02/visual-design_img.png">
-                            </div>
-                            <div class="text">
-                                <h3>Visual Design</h3>
-                                <p>CRC is required high accuracy, serious responsibility and perseverance to make new medicines, so the client company looks for  the candidates who have such personality. Adding to that, the client wants the candidates to know that CRC is a rewarding occupation that they can contribute to society by supporting the creation of new medicines. Therefore our team decided to make the website look dignified.<br>My role in this project was making UI design of some subpages (11 pages), so I made UI design by following the top pages’s tone and mood.</p>
-                                <div class="fluid"></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="other-img">
-                        <img src="../img/work/website/website02/other-img01.jpg">
-                        <img src="../img/work/website/website02/other-img02.jpg">
                         <div class="fluid"></div>
-                    </div>
-                <!-- </div> -->
-            </section>
-        </div>
+                    <!-- </div> -->
+                </section>
+                <section class="main">
+                    <!-- <div class="inner"> -->
+                        <img class="main-img" src="../img/work/website/website02/main-img.jpg">
+                        <div class="explanation">
+                            <div class="project">
+                                <div class="text">
+                                    <h3>Project</h3>
+                                    <p>The client company is a clinical trial company. This project is renewing the client's recruitment site because the previous recruitment site has gotten old and they started to recruit actively. Their recruitment problem is that they are also recruiting people who do not have experience as a clinical research coordinator (CRC), however many people do not know CRC, and the client company could not get many candidates. So they want to tell people what the CRC job is like through the new recruitment site. Our team decided to mainly make content that people can learn from the basics to the details of the CRC job.</p>
+                                </div>
+                                <div class="work_img01">
+                                    <img src="../img/work/website/website02/project_img.png">
+                                </div>
+                            </div>
+                            <div class="visual-design">
+                                <div class="work_img02">
+                                    <img src="../img/work/website/website02/visual-design_img.png">
+                                </div>
+                                <div class="text">
+                                    <h3>Visual Design</h3>
+                                    <p>CRC is required high accuracy, serious responsibility and perseverance to make new medicines, so the client company looks for  the candidates who have such personality. Adding to that, the client wants the candidates to know that CRC is a rewarding occupation that they can contribute to society by supporting the creation of new medicines. Therefore our team decided to make the website look dignified.<br>My role in this project was making UI design of some subpages (11 pages), so I made UI design by following the top pages’s tone and mood.</p>
+                                    <div class="fluid"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="other-img">
+                            <img src="../img/work/website/website02/other-img01.jpg">
+                            <img src="../img/work/website/website02/other-img02.jpg">
+                            <div class="fluid"></div>
+                        </div>
+                    <!-- </div> -->
+                </section>
+            </div>
             <section class="next-project">
                 <div class="next-project_inner">
                     <div class="title">
@@ -120,6 +123,7 @@
                     </div>
                 </div>
             </section>
+        </div>
         <footer>
         </footer>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
