--- a/work/website01.html
+++ b/work/website01.html
@@ -53,6 +53,7 @@
                                 <div class="text">
                                     <h3>Project</h3>
                                     <p>The client company is an IT company that creates software for other companies and public institutions. This project is renewing the client's recruitment site. The client wanted the candidates to know the company's attractiveness through the recruitment site. So our team searched for their attractiveness and the differences from other companies, and we found some attractive points. And we defined their most attractive point as the CEO. He is also a software engineer so he knows what is the best environment for  the employees well and tries to give it to the employees. Therefore we decided the website’s concept and the main copy is “Engineers are great (エンジニアは偉大だ)” that the CEO mentioned in his interview.</p>
+                                    <div class="fluid"></div>
                                 </div>
                                 <div class="work_img01">
                                     <img src="../img/work/website/website01/project_img.png">
