--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                             <h2>Digital</h2>
                             <h2>Designer</h2>
                         </div>
-                        <p class="text">Hi, I’m Kanae, digital designer.<br>I mainly create<span class="text_orange"> web design</span>,<br>but also have experience of<br>creating <span class="text_orange">video design</span>, <br class="no_sp"><span class="text_orange">logos</span> and  <br class="no_pc"><span class="text_orange">shop sign design</span>.</p>
+                        <p class="text">Hi, I’m Kanae, a digital designer.<br>I specialize in<span class="text_orange"> web design</span>,<br>and also have experience of<br>creating <span class="text_orange">video</span>, <br class="no_sp"><span class="text_orange">logos</span> and  <br class="no_pc"><span class="text_orange">shop sign design</span>.</p>
                         <div class="fluid"></div>
                     </div>
                     <div class="wrapper_rigth">
