--- a/work/website01.html
+++ b/work/website01.html
@@ -32,7 +32,7 @@
                         <div class="company">
                             <p class="name">Tera Technology</p><div class="line"></div><p class="industry">IT Company</p>
                         </div>
-                        <h2 class="MV_title">Recruitment Website</h2>
+                        <h2 class="MV_title">Career Site</h2>
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
@@ -52,7 +52,7 @@
                             <div class="project">
                                 <div class="text">
                                     <h3>Project</h3>
-                                    <p>The client company is an IT company that creates software for other companies and public institutions. This project is renewing the client's recruitment site. The client wanted the candidates to know the company's attractiveness through the recruitment site. So our team searched for their attractiveness and the differences from other companies, and we found some attractive points. And we defined their most attractive point as the CEO. He is also a software engineer so he knows what is the best environment for  the employees well and tries to give it to the employees. Therefore we decided the website’s concept and the main copy is “Engineers are great (エンジニアは偉大だ)” that the CEO mentioned in his interview.</p>
+                                    <p>The client specializes in software development, providing services to individual clients and public institutions. The scope of this project was to refresh the look of the client's website and their need to express that their company is more appealing than competition. In a thorough research we have concluded that the strength of the company is its CEO. He, being a seasoned software engineer, is aware of the impact of the work environment on the employees. This became a base for the concept of renewal and we chose the concept to be “Engineers are great (エンジニアは偉大だ)”, something the CEO himself mentions in the interview.</p>
                                 </div>
                                 <div class="work_img01">
                                     <img src="../img/work/website/website01/project_img.png">
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="text">
                                     <h3>Visual Design</h3>
-                                    <p>The client told us the main reason why most of the candidates decided to join the company is that the employees are friendly and the company’s atmosphere is cheerful, and the client wanted the candidates to feel the friendly company culture through the website. Therefore I used the color and shape of circles of the company's logos to make the website have the company identity, and friendly and cheerful atmosphere. And also, I chose blue as the main color to impress the users the smartness of SE. Adding to that, I used many pictures of employees on the top page to convey the users the company's atmosphere.</p>
+                                    <p>In the interview with the client we have discovered that the main reason candidates join their company is a friendly and cheerful atmosphere. The client wanted candidates visiting the website to feel the company’s friendly culture. This led me to utilize colors and shape of circles present in the company’s logo to convey client’s identity and environment. I chose blue as the primary color to highlight the cleverness of the software engineers, complementing it with images of the employees to impress visitors</p>
                                     <div class="fluid"></div>
                                 </div>
                             </div>
@@ -91,22 +91,22 @@
                                             <img src="../img/home/work/website02.jpg">
                                         </div>
                                         <P class="project-name">Recruitment Website</P>
-                                        <p class="company-name">Medical Company</p>
+                                        <p class="company-name">Healthcare</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/banner01.jpg">
                                     </div>
-                                    <P class="project-name">Recruitment Bunner</P>
-                                    <p class="company-name">Restaurant</p>
+                                    <P class="project-name">Recruitment Banner</P>
+                                    <p class="company-name">Food And Beverage</p>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/logo01.jpg">
                                     </div>
                                     <P class="project-name">Service Logo</P>
-                                    <p class="company-name">Advertising Company</p>
+                                    <p class="company-name">Advertisement</p>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
