--- a/work/website01.html
+++ b/work/website01.html
@@ -64,7 +64,7 @@
                                 </div>
                                 <div class="text">
                                     <h3>Visual Design</h3>
-                                    <p>In the interview with the client we have discovered that the main reason candidates join their company is a friendly and cheerful atmosphere. The client wanted candidates visiting the website to feel the company’s friendly culture. This led me to utilize colors and shape of circles present in the company’s logo to convey client’s identity and environment. I chose blue as the primary color to highlight the cleverness of the software engineers, complementing it with images of the employees to impress visitors</p>
+                                    <p>In the interview with the client we have discovered that the main reason candidates join their company is a friendly and cheerful atmosphere. The client wanted candidates visiting the website to feel the company’s friendly culture. This led me to utilize colors and shape of circles present in the company’s logo to convey client’s identity and environment. I chose blue as the primary color to highlight the cleverness of the software engineers, complementing it with images of the employees to impress visitors.</p>
                                     <div class="fluid"></div>
                                 </div>
                             </div>
