--- a/work/website02.html
+++ b/work/website02.html
@@ -30,9 +30,9 @@
                 <section class="MV">
                     <!-- <div class="inner"> -->
                         <div class="company">
-                            <p class="name">EP Link</p><div class="line"></div><p class="industry">Clinical Trial Company</p>
+                            <p class="name">EP Link</p><div class="line"></div><p class="industry">Healthcare</p>
                         </div>
-                        <h2 class="MV_title">Recruitment Website</h2>
+                        <h2 class="MV_title">Career Site</h2>
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
@@ -90,30 +90,30 @@
                                         <div class="next-project_img">
                                             <img src="../img/home/work/website01.jpg">
                                         </div>
-                                        <P class="project-name">Recruitment Website</P>
-                                        <p class="company-name">IT Company</p>
+                                        <P class="project-name">Career Site</P>
+                                        <p class="company-name">IT</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/banner01.jpg">
                                     </div>
-                                    <P class="project-name">Recruitment Bunner</P>
-                                    <p class="company-name">Restaurant</p>
+                                    <P class="project-name">Recruitment Banner</P>
+                                    <p class="company-name">Food And Beverage</p>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/logo01.jpg">
                                     </div>
                                     <P class="project-name">Service Logo</P>
-                                    <p class="company-name">Advertising Company</p>
+                                    <p class="company-name">Advertisement</p>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/video01.jpg">
                                     </div>
                                     <P class="project-name">Event Video</P>
-                                    <p class="company-name">Human Resources Company</p>
+                                    <p class="company-name">Human Resources</p>
                                 </li>
                             </ul>
                         </div>
