--- a/work/website01.html
+++ b/work/website01.html
@@ -30,7 +30,7 @@
                 <section class="MV">
                     <!-- <div class="inner"> -->
                         <div class="company">
-                            <p class="name">Tera Technology</p><div class="line"></div><p class="industry">IT Company</p>
+                            <p class="name">Tera Technology</p><div class="line"></div><p class="industry">IT</p>
                         </div>
                         <h2 class="MV_title">Career Site</h2>
                         <div class="MV_bottom">
