--- a/work/website01.html
+++ b/work/website01.html
@@ -113,7 +113,7 @@
                                         <img src="../img/home/work/video01.jpg">
                                     </div>
                                     <P class="project-name">Event Video</P>
-                                    <p class="company-name">Human Resources Company</p>
+                                    <p class="company-name">Human Resources</p>
                                 </li>
                             </ul>
                         </div>
