--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <ul class="header_inner" id="g-nav">
                         <li class="position-now"><a href="#home">Home</a></li>
                         <li><a href="#work-list_anchor">Work</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <!-- <li><a href="about.html">About</a></li> -->
                     </ul>
                 </header>
             </div>
@@ -30,10 +30,14 @@
                 <section class="MV scroll-point">
                     <div class="wrapper_left">
                         <div class="title">
-                            <h2>Digital</h2>
-                            <h2>Designer</h2>
+                            <div class="title_cover">
+                                <h2 class="title01">Digital</h2>
+                            </div>
+                            <div class="title_cover">
+                                <h2 class="title02">Designer</h2>
+                            </div>
                         </div>
-                        <p class="text">Hi, I’m Kanae, a digital designer.<br>I specialize in<span class="text_orange"> web design</span>,<br>and also have experience of<br>creating <span class="text_orange">video</span>, <br class="no_sp"><span class="text_orange">logos</span> and  <br class="no_pc"><span class="text_orange">shop sign design</span>.</p>
+                        <p class="text">Hi, I’m Kanae and a digital designer.<br>I mainly create<span class="text_orange"> web design</span>,<br>but also have experience of<br>creating <span class="text_orange">video design</span>, <br class="no_sp"><span class="text_orange">logos</span> and  <br class="no_pc"><span class="text_orange">shop sign design</span>.</p>
                         <div class="fluid"></div>
                     </div>
                     <div class="wrapper_rigth">
@@ -94,7 +98,7 @@
                             <div class="tab_panel-box tab_panel-box-banner" data-panel="banner">
                                 <ul class="work-box">
                                     <li class="work-box-item">
-                                        <a>
+                                        <a href="work/banner01.html">
                                             <div class="work-box-image">
                                                 <img src="img/home/work/banner01.jpg">
                                             </div>
@@ -111,7 +115,7 @@
                             <div class="tab_panel-box tab_panel-box-logo" data-panel="logo">
                                 <ul class="work-box">
                                     <li class="work-box-item">
-                                        <a>
+                                        <a href="work/logo01.html">
                                             <div class="work-box-image">
                                                 <img src="img/home/work/logo01.jpg">
                                             </div>
