--- a/work/website01.html
+++ b/work/website01.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kanae's portfolio site</title>
         <meta name="description" content="Digital designer Kanae's portfolio site.">
-        <meta name="keyword" content="portfolio,digital designer,website">
+        <meta name="keyword" content="portfolio,digital designer,website,logo,banner,design">
         <meta property="og:url" content="" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="Digital designer Kanae's portfolio site" />
@@ -23,7 +23,7 @@
                     <ul class="header_inner">
                         <li><a href="../index.html">Home</a></li>
                         <li class="current-page"><a href="../index.html#work-list_anchor">Work</a></li>
-                        <li><a href="../about.html">About</a></li>
+                        <!-- <li><a href="../about.html">About</a></li> -->
                     </ul>
                 </header>
             </div>
@@ -91,29 +91,33 @@
                                         <div class="next-project_img">
                                             <img src="../img/home/work/website02.jpg">
                                         </div>
-                                        <P class="project-name">Recruitment Website</P>
+                                        <p class="project-name">Career Site</p>
                                         <p class="company-name">Healthcare</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
-                                    <div class="next-project_img">
-                                        <img src="../img/home/work/banner01.jpg">
-                                    </div>
-                                    <P class="project-name">Recruitment Banner</P>
-                                    <p class="company-name">Food And Beverage</p>
+                                    <a href="banner01.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/banner01.jpg">
+                                        </div>
+                                        <p class="project-name">Recruitment Banner</p>
+                                        <p class="company-name">Food And Beverage</p>
+                                    </a>
                                 </li>
                                 <li class="next-project_box-item">
-                                    <div class="next-project_img">
-                                        <img src="../img/home/work/logo01.jpg">
-                                    </div>
-                                    <P class="project-name">Service Logo</P>
-                                    <p class="company-name">Advertisement</p>
+                                    <a href="logo01.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/logo01.jpg">
+                                        </div>
+                                        <p class="project-name">Service Logo</p>
+                                        <p class="company-name">Advertisement</p>
+                                    </a>
                                 </li>
                                 <li class="next-project_box-item">
                                     <div class="next-project_img">
                                         <img src="../img/home/work/video01.jpg">
                                     </div>
-                                    <P class="project-name">Event Video</P>
+                                    <p class="project-name">Event Video</p>
                                     <p class="company-name">Human Resources</p>
                                 </li>
                             </ul>
