--- a/work/logo01.html
+++ b/work/logo01.html
@@ -29,53 +29,31 @@
             </div>
             <div class="body_inner">
                 <section class="MV">
-                    <!-- <div class="inner"> -->
                         <div class="company">
-                            <p class="name">EP Link</p><div class="line"></div><p class="industry">Healthcare</p>
+                            <p class="name">Dentsu PR consulting</p><div class="line"></div><p class="industry">Advertisement</p>
                         </div>
-                        <h2 class="MV_title">Career Site</h2>
+                        <h2 class="MV_title">Service Logo</h2>
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
-                                <p class="role">UI design (subpages)</p>
-                            </div>
-                            <div class="btn_visit">
-                                <a href="https://www.ep-link.co.jp/recruit/" target="_blank">Visit Website</a>
+                                <p class="role">Design</p>
                             </div>
                         </div>
                         <div class="fluid"></div>
-                    <!-- </div> -->
                 </section>
                 <section class="main">
-                    <!-- <div class="inner"> -->
-                        <img class="main-img" src="../img/work/website/website02/main-img.jpg">
-                        <div class="explanation">
-                            <div class="project">
-                                <div class="text">
-                                    <h3>Project</h3>
-                                    <p>The client company is a clinical trial company. This project is renewing the client's recruitment site because the previous recruitment site has gotten old and they started to recruit actively. Their recruitment problem is that they are also recruiting people who do not have experience as a clinical research coordinator (CRC), however many people do not know CRC, and the client company could not get many candidates. So they want to tell people what the CRC job is like through the new recruitment site. Our team decided to mainly make content that people can learn from the basics to the details of the CRC job.</p>
-                                </div>
-                                <div class="work_img01">
-                                    <img src="../img/work/website/website02/project_img.png">
-                                </div>
+                    <div class="explanation explanation-short">
+                        <div class="visual-design">
+                            <div class="work_img01">
+                                <img src="../img/work/logo/logo01/visual-design_img.jpg">
                             </div>
-                            <div class="visual-design">
-                                <div class="work_img02">
-                                    <img src="../img/work/website/website02/visual-design_img.png">
-                                </div>
-                                <div class="text">
-                                    <h3>Visual Design</h3>
-                                    <p>CRC is required high accuracy, serious responsibility and perseverance to make new medicines, so the client company looks for  the candidates who have such personality. Adding to that, the client wants the candidates to know that CRC is a rewarding occupation that they can contribute to society by supporting the creation of new medicines. Therefore our team decided to make the website look dignified.<br>My role in this project was making UI design of some subpages (11 pages), so I made UI design by following the top pages’s tone and mood.</p>
-                                    <div class="fluid"></div>
-                                </div>
+                            <div class="text">
+                                <h3>Visual Design</h3>
+                                <p>This logo was created for “issue 100” which is a marketing service. Three designers, including myself, proposed designs for the logo, and ultimately, this design was selected by the customer. The service represented by this logo identifies 100 social issues that consumers are concerned about, enabling companies to highlight their social value by advertising how their business addresses these issues.<br>I designed this logo to convey that companies can gather extensive consumer feedback on social issues through this service. The design represents society with a cityscape, where the buildings are created as speech bubbles to signify that the feedback pertains to social issues. The use of multiple colors emphasizes the diversity of voices and opinions that users can access.</p>
                             </div>
                         </div>
-                        <div class="other-img">
-                            <img src="../img/work/website/website02/other-img01.jpg">
-                            <img src="../img/work/website/website02/other-img02.jpg">
-                            <div class="fluid"></div>
-                        </div>
-                    <!-- </div> -->
+                        <div class="fluid"></div>
+                    </div>
                 </section>
             </div>
             <section class="next-project">
@@ -96,21 +74,21 @@
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
+                                    <a href="website02.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/website02.jpg">
+                                        </div>
+                                        <p class="project-name">Career Site</p>
+                                        <p class="company-name">Healthcare</p>
+                                    </a>
+                                </li>
+                                <li class="next-project_box-item">
                                     <a href="banner01.html">
                                         <div class="next-project_img">
                                             <img src="../img/home/work/banner01.jpg">
                                         </div>
                                         <p class="project-name">Recruitment Banner</p>
                                         <p class="company-name">Food And Beverage</p>
-                                    </a>
-                                </li>
-                                <li class="next-project_box-item">
-                                    <a href="logo01.html">
-                                        <div class="next-project_img">
-                                            <img src="../img/home/work/logo01.jpg">
-                                        </div>
-                                        <p class="project-name">Service Logo</p>
-                                        <p class="company-name">Advertisement</p>
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
@@ -127,8 +105,7 @@
                         <a href="../index.html#work-list_anchor">Project List</a>
                     </div>
                 </div>
-            </section>
-        </div>
+            </section>  
         <footer>
         </footer>
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
