--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
                 <ul class="header_inner">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#work-list_anchor">Work</a></li>
-                    <li class="current-page"><a href="about.html">About</a></li>
+                    <!-- <li class="current-page"><a href="about.html">About</a></li> -->
                 </ul>
             </header>
         <div class="header_wrapper">
