--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <div class="tab_panel-box tab_panel-box-video" data-panel="video">
                                 <ul class="work-box">
                                     <li class="work-box-item">
-                                        <a>
+                                        <a href="work/video01.html">
                                             <div class="work-box-image">
                                                 <img src="img/home/work/video01.jpg">
                                             </div>
