--- a/work/video01.html
+++ b/work/video01.html
@@ -29,53 +29,37 @@
             </div>
             <div class="body_inner">
                 <section class="MV">
-                    <!-- <div class="inner"> -->
                         <div class="company">
-                            <p class="name">Tera Technology</p><div class="line"></div><p class="industry">IT</p>
+                            <p class="name">Mynavi</p><div class="line"></div><p class="industry">Human Resources</p>
                         </div>
-                        <h2 class="MV_title">Career Site</h2>
+                        <h2 class="MV_title">Event Video</h2>
                         <div class="MV_bottom">
                             <div class="myrole">
                                 <p class="title">My Role</p>
-                                <p class="role">UI design, Fixed html css, Javascript</p>
-                            </div>
-                            <div class="btn_visit">
-                                <a href="https://www.teratech.co.jp/recruit/" target="_blank">Visit Website</a>
+                                <p class="role">Design</p>
                             </div>
                         </div>
                         <div class="fluid"></div>
-                    <!-- </div> -->
                 </section>
                 <section class="main">
-                    <!-- <div class="inner"> -->
-                        <img class="main-img" src="../img/work/website/website01/main-img.jpg">
-                        <div class="explanation">
-                            <div class="project">
-                                <div class="text">
-                                    <h3>Project</h3>
-                                    <p>The client specializes in software development, providing services to individual clients and public institutions. The scope of this project was to refresh the look of the client's website and their need to express that their company is more appealing than competition. In a thorough research we have concluded that the strength of the company is its CEO. He, being a seasoned software engineer, is aware of the impact of the work environment on the employees. This became a base for the concept of renewal and we chose the concept to be “Engineers are great (エンジニアは偉大だ)”, something the CEO himself mentions in the interview.</p>
-                                </div>
-                                <div class="work_img01">
-                                    <img src="../img/work/website/website01/project_img.png">
-                                </div>
+                    <div class="explanation explanation-short video_explanation-short">
+                        <div class="visual-design">
+                            <div class="work_img01">
+                                <img src="../img/work/video/video01/visual-design_img.jpg">
                             </div>
-                            <div class="visual-design">
-                                <div class="work_img02">
-                                    <img src="../img/work/website/website01/visual-design_img.png">
-                                </div>
-                                <div class="text">
-                                    <h3>Visual Design</h3>
-                                    <p>In the interview with the client we have discovered that the main reason candidates join their company is a friendly and cheerful atmosphere. The client wanted candidates visiting the website to feel the company’s friendly culture. This led me to utilize colors and shape of circles present in the company’s logo to convey client’s identity and environment. I chose blue as the primary color to highlight the cleverness of the software engineers, complementing it with images of the employees to impress visitors.</p>
-                                    <div class="fluid"></div>
-                                </div>
+                            <div class="text">
+                                <h3>Visual Design</h3>
+                                <p>In this project, I collaborated with a video creator, and my role involved designing the visual elements and creating illustrations.<br> This video was produced for recruitment events hosted by our client, explaining details such as how to participate, and when and where the events would take place. The client requested that we primarily use illustrations to convey to job seekers that the events are easily accessible and enjoyable. Consequently, I ensured the voice and tone of the video were lively and approachable. For the human illustrations in the video, I sourced and purchased them from various websites, then edited them to fit the video’s style. However, I personally created all other illustrations and icons.</p>
                             </div>
+                            <!-- <div class="fluid"></div> -->
                         </div>
-                        <div class="other-img">
-                            <img src="../img/work/website/website01/other-img01.jpg">
-                            <img src="../img/work/website/website01/other-img02.jpg">
+                        <!-- <div class="fluid"></div> -->
+                    </div>
+                    <div class="other-img video_other-img">
+                            <img src="../img/work/video/video01/other-img01.jpg">
+                            <img src="../img/work/video/video01/other-img02.jpg">
                             <div class="fluid"></div>
                         </div>
-                    <!-- </div> -->
                 </section>
             </div>
             <section class="next-project">
@@ -86,6 +70,15 @@
                     <div class="next-project_box_wrapper">
                         <div class="next-project_box_inner">
                             <ul class="next-project_box">
+                                <li class="next-project_box-item">
+                                    <a href="website01.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/website01.jpg">
+                                        </div>
+                                        <P class="project-name">Career Site</P>
+                                        <p class="company-name">IT</p>
+                                    </a>
+                                </li>
                                 <li class="next-project_box-item">
                                     <a href="website02.html">
                                         <div class="next-project_img">
@@ -111,15 +104,6 @@
                                         </div>
                                         <p class="project-name">Service Logo</p>
                                         <p class="company-name">Advertisement</p>
-                                    </a>
-                                </li>
-                                <li class="next-project_box-item">
-                                    <a href="video01.html">
-                                        <div class="next-project_img">
-                                            <img src="../img/home/work/video01.jpg">
-                                        </div>
-                                        <p class="project-name">Event Video</p>
-                                        <p class="company-name">Human Resources</p>
                                     </a>
                                 </li>
                             </ul>
