--- a/work/website02.html
+++ b/work/website02.html
@@ -114,11 +114,13 @@
                                     </a>
                                 </li>
                                 <li class="next-project_box-item">
-                                    <div class="next-project_img">
-                                        <img src="../img/home/work/video01.jpg">
-                                    </div>
-                                    <p class="project-name">Event Video</p>
-                                    <p class="company-name">Human Resources</p>
+                                    <a href="video01.html">
+                                        <div class="next-project_img">
+                                            <img src="../img/home/work/video01.jpg">
+                                        </div>
+                                        <p class="project-name">Event Video</p>
+                                        <p class="company-name">Human Resources</p>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
